[package]
name = "credman"
version = "0.1.0"
edition = "2021"
authors = ["Ricky Kettlitz"]
license-file = "LICENSE"
description = "A little command line tool based on RustCrypto: RSA library"
repository = "https://github.com/ricky85ps/credman"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = { version = "0.9.2", features = ["serde"] }
clap = { version = "4.4.7", features = ["derive"] }
rand = "0.8.5"
postcard = { version = "1.0.8" , features = ["alloc"]}
